chanhe open api spec and paymant controller, add tests
