# open-api/api-spec.yml
@@ -18,12 +18,8 @@ paths:
       summary: Get user's current balance
       tags:
         - Balance
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/BalanceRequest"
+      parameters:
+        - $ref: '#/components/parameters/UserId'
       responses:
         "200":
           description: Current balance retrieved successfully
@@ -36,13 +32,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/BalanceResponse"
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/BalanceResponse"
       x-content-type: application/json
       x-accepts:
         - application/json
@@ -69,32 +65,33 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/PaymentResponse"
         "404":
           description: User not found
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/PaymentResponse"
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: "#/components/schemas/PaymentResponse"
       x-content-type: application/json
       x-accepts:
         - application/json
 components:
+  parameters:
+    UserId:
+      name: userId
+      in: query
+      required: true
+      description: User's ID
+      schema:
+        type: integer
+        format: int64
   schemas:
-    BalanceRequest:
-      type: object
-      properties:
-        user_id:
-          type: integer
-          format: int64
-      example:
-        user_id: 1
     BalanceResponse:
       type: object
       properties:
@@ -137,10 +134,3 @@ components:
         new_balance: 3000
         success: true
         message: "Payment successful"
-    ErrorResponse:
-      type: object
-      example:
-        error: error
-      properties:
-        error:
-          type: string
